# event_graph_aegnn

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
adapted_sgformer/: pyproject.toml
adapted_sgformer/adaptedsgformer/: dataset.py  model.py
adapted_sgformer/scripts/: train.py
config/: config.yaml  config_adapted_aegt.yaml  config_adapted_sgformer.yaml  config_aegt.yaml  config_dagt.yaml  config_preprocessing.yaml  config_tune.yaml
scripts/: open_dataset_prophesee.py  split_ncaltech_data.py
test_codes/: config.yaml  split_ncaltech_data.py  test_aegnn.py  test_codes_random.ipynb  train_model.ipynb
tuto_pg/: intro.py
utils/: s3.py
