[project]
name = "event-graph"
version = "0.1.0"
description = "Event-based graph experiments with local AEGNN integration"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "aegnn",
    "ipython>=8.38,<9",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "mapcalc>=0.2.2",
    "matplotlib>=3.8,<3.9",
    "networkx>=3.2,<3.3",
    "numpy>=1.26,<2.0",
    "opencv-python>=4.9,<5",
    "pandas>=2.1,<2.3",
    "pyg-lib>=0.4.0",
    "lightning==2.6.1",
    "pytorch-lightning==2.6.1",
    "pyyaml>=6.0,<7",
    "scikit-learn>=1.4,<1.6",
    "setuptools<81",
    "torch==2.7.1",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.7,<2.8",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "torchmetrics>=1.4,<2",
    "torchvision==0.22.1",
    "tqdm>=4.66,<5",
    "wandb>=0.25.0",
    "awscli>=1.44.75",
    "boto3>=1.42.85",
    "optuna>=4.8.0",
    "optuna-integration[pytorch-lightning]>=4.8.0",
    "attrs>=25.4.0",
    "comet-ml>=3.57.3",
    "configobj>=5.0.9",
    "einops>=0.8.2",
    "googledrivedownloader>=1.1.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "jsonschema>=4.26.0",
    "littleutils>=0.2.4",
    "ogb>=1.3.6",
    "outdated>=0.2.2",
    "packaging>=26.0",
    "psutil>=7.2.2",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "scipy>=1.15.3",
    "semantic-version>=2.10.0",
    "sentry-sdk>=2.54.0",
    "simplejson>=4.0.1",
    "urllib3>=2.6.3",
    "websocket-client>=1.9.0",
    "wrapt>=2.1.2",
    "wurlitzer>=3.1.1",
    "goat>=0.0.0",
    "grit>=0.0.0",
    "yacs>=0.1.8",
    "opt-einsum>=3.4.0",
    "sgformer>=0.0.0",
    "adapted-sgformer>=0.0.0",
]

[tool.uv.workspace]
members = [
    "sync_zotero",
]

[tool.uv.sources]
goat = { path = "./external/goat", editable = true }
aegnn = { path = "./external/aegnn", editable = true }
grit = { path = "./external/GRIT", editable = true }
sgformer = { path = "./external/SGFormer", editable = true }
adapted-sgformer = { path = "./adapted_sgformer", editable = true }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
pyg-lib = { index = "pyg-cu128" }
torch-cluster = { index = "pyg-cu128" }
torch-scatter = { index = "pyg-cu128" }
torch-sparse = { index = "pyg-cu128" }
torch-spline-conv = { index = "pyg-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pyg-cu128"
url = "https://data.pyg.org/whl/torch-2.7.1+cu128.html"
format = "flat"
explicit = true
