[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adapted_sgformer"
version = "0.0.0"
description = "Adaptation of SGFormer method for Event-based camera"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["adaptedsgformer", "adaptedsgformer.*"]